fix: sidebar overlapping, because button font size was to big

--- a/src/main/resources/de/uniks/stpmon/k/views/css/sidebar.css
+++ b/src/main/resources/de/uniks/stpmon/k/views/css/sidebar.css
@@ -10,7 +10,7 @@
 }
 
 .button-color:hover {
-    -fx-font-size: 22px;
+    -fx-font-size: 20px;
 }
 
 .sidebar-content {
